# bdmle-cicd-hw

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml  docker.yaml  tests.yaml
src/bdmle_cicd_hw/: task.py
tests/: test_task.py
