[project]
name = "bdmle-cicd-hw"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alisher Karibzhanov", email = "alisktl@gmail.com"},
]
dependencies = [
    "pip>=24.2",
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
